not showing purpose on profile when it's not set and applied box model clearing to the dt element of the definition list that prevents rows dislocation ( closes #1591 )

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2493,6 +2493,7 @@ div.best_video div.right img {
     padding: 0 0 3px 5px;
     margin: 0;
     color: #92897E;
+    clear: both;
 }
 
 #profile_desc dd {
